--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scrollbar-color:#65CFB5;
-  scrollbar-width:thin;
-  -webkit-tap-highlight-color:transparent;
+  scrollbar-color: #65cfb5;
+  scrollbar-width: thin;
+  -webkit-tap-highlight-color: transparent;
 }
 /* STarry bg */
 
@@ -14,7 +14,8 @@ body {
   color: white;
   font-family: "Istok Web", sans-serif;
   min-height: 100%;
-  margin: 0;
+  margin: 0 0 0;
+  padding: 0 0 0;
   line-height: 1.5;
 }
 
@@ -740,8 +741,6 @@ body {
   }
 }
 
-
-
 @media screen and (max-width: 400px) {
   #circle1 {
     position: absolute;
@@ -757,7 +756,7 @@ body {
     border: 1px solid transparent;
     transform: translate(400px, -90px) rotateZ(150deg);
   }
-  
+
   #circle2 {
     position: absolute;
     top: 0;
@@ -773,7 +772,7 @@ body {
     opacity: 0.45;
     border-radius: 50%;
   }
-  
+
   #circle3 {
     position: absolute;
     bottom: 0;
@@ -1052,7 +1051,6 @@ a:hover:after {
   margin: auto;
 }
 .card-1 {
-
   background-image: url("./solutions-assets/unsplash_OqtafYT5kTw.png");
   background-size: cover;
   background-position: center;
